--- a/work.html
+++ b/work.html
@@ -740,7 +740,8 @@ var hotSettings = {
   manualColumnMove: true,
   contextMenu: true,
   filters: true,
-  dropdownMenu: true};
+  dropdownMenu: true,
+licenseKey: 'non-commercial-and-evaluation'};
   var hot = new Handsontable(hotElement, hotSettings);
 </script>
       <footer>
