--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HolaHola</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.css">
+    <link rel="stylesheet" type="text/css" href="https://handsontable.com/static/css/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
@@ -12,13 +15,13 @@
 
   <body>
     <div class = "topHeader">
-        <ul class="breadcrumb">
-          <li><a href="index.html">Home</a> <span class="divider">/</span></li>
-          <li><a href="work.html">Library</a> <span class="divider">/</span></li>
-          <li class="active">Data</li>
-        </ul> 
-    </div>
-    <header>
+            <ul class="breadcrumb">
+              <li><a href="index.html">Home</a> <span class="divider">/</span></li>
+              <li><a href="work.html">Library</a> <span class="divider">/</span></li>
+              <li class="active">Data</li>
+            </ul> 
+        </div>
+        <div class = "imageHeader">
         <h1>
             <a href = "index.html">Bio_Test</a>
         </h1>
@@ -27,10 +30,10 @@
                 <li><a href = "work.html">WORK </a></li>
             </ul>
         </nav>
-    </header>
-    <div class = "subHeader">
-        <p>Welcome!</p>
-    </div>
+        </div>
+        <div class = "subHeader">
+        <p>This is data library</p>
+        </div>
     <div class = "container">
     <!-- Main Content Area-->
     <main class = "home">
