--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>HolaHola</title>
+    <title>Bio_test</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.css">
     <link rel="stylesheet" type="text/css" href="https://handsontable.com/static/css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.js"></script>
@@ -40,8 +40,8 @@
         <div class = "left_list">
             <div class = "page_list">
                 <ul class="list-group">
-                  <li class="list-group-item"><a href="work.html">Home</a></li>
-                  <li class="list-group-item"><a href="work.html">Home</a></li>
+                  <li class="list-group-item"><a href="index.html">Home</a></li>
+                  <li class="list-group-item"><a href="work.html">Data Library</a></li>
                   <li class="list-group-item"><a href="work.html">Home</a></li>
                   <li class="list-group-item"><a href="work.html">Home</a></li>
                   <li class="list-group-item"><a href="work.html">Home</a></li>
