Add a new page and add a div into work.html

--- a/extendSwissData.html
+++ b/extendSwissData.html
@@ -39,24 +39,18 @@
         <p>This is data library</p>
         </div>
       <div class = "abstractOfPage">
-        <div class = "cList">
-            <ul>
-                <li>P42106<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a>
-                </li>
-                <li>P76113<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
-                <li>M9NZ71<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
-                <li>H3JYE4<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
-                <li>P32106<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
-            </ul>
-        </div>
-        <div class = "abstract">
-                <p>The 155 foods with retention factor data are classified in 7 classes and 32 sub-classes. Use the text-boxes below to filter on food before process, food after process, process, yield factor, and the number of associated compounds and retention factor data. Use the scrolling menu on the left to select one or several food classes or sub-classes.</p>
+        <div class = "informationOfGene">
+                <h1>
+                    Characterize
+                </h1>
+                <p>1	C-ring cleavage quercetin	Bacillus subtilis (strain 168)	a tryptophan auxotroph isolated after X-rays mutagenesis of B. subtilis Marburg strain 	Quercetin 2,3-dioxygenase	P42106 	Cupin_2	reviewed	qdoI	1.13.11.24	yes	quercetin	2-(3,4-dihydroxybenzoyloxy)-4,6-dihydroxybenzoate	1Y3T, 2H0V	swiss-model	3.8 (for quercetin)	2		10.1016/S0014-5793(03)01439-X	Bacillus subtilis YxaG is a novel Fe-containing quercetin 2,3-dioxygenase</p>
+                
         </div>
 
       </div>
       <ul class="breadcrumb">
-              <li><a href="index.html">Characterize</a> <span class="divider">/</span></li>
-              <li>Swissport<span class="divider">/</span></li>
+              <li><a href="work.html">Characterize</a> <span class="divider">/</span></li>
+              <li><a href="extendSwissData.html">Swissport</a><span class="divider">/</span></li>
               <li class="active">EML</li>
             </ul> 
         <div id = "hot"></div>
